name:                adventofcode2017answers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/adventofcode2017answers#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable adventofcode2017answers
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day01
  hs-source-dirs:      src
  main-is:             day01.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day02
  hs-source-dirs:      src
  main-is:             day02.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day03
  hs-source-dirs:      src
  main-is:             day03.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
